// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Developer
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfo"
      >
        <Text
          baseline={true}
          small={true}
        >
          <LocationIcon />
           
          Kuala Lumpur
        </Text>
        <Text
          baseline={true}
          small={true}
        >
          <MoneyIcon />
           
          RM999999999 - RM999999999999
        </Text>
      </div>
      <div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with description props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      small={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      className="positionTitle"
      heading={true}
    >
      Developer
    </Text>
  </Section>
  <Section
    className="jobDescriptionSection"
  >
    <Text
      baseline={true}
      className="bodyDescriptionText"
      small={true}
    >
      Hello world
    </Text>
  </Section>
  <Section
    className="footerSection"
  >
    <div
      className="footerLeft"
    >
      <div
        className="jobInfo"
      >
        <Text
          baseline={true}
          small={true}
        >
          <LocationIcon />
           
          Kuala Lumpur
        </Text>
        <Text
          baseline={true}
          small={true}
        >
          <MoneyIcon />
           
          RM999999999 - RM999999999999
        </Text>
      </div>
      <div>
        <Text
          baseline={true}
          className="postingDuration"
          small={true}
        >
          1 hour ago
        </Text>
      </div>
    </div>
  </Section>
</Card>
`;
